[package]
name = "passwm"
version = "0.1.0"
edition = "2024"
authors = ["Joe Kim<joesm.genie@gmail.com"]
description = "A simple password manager written in Rust. It uses AES-GCM for encryption and Argon2 for key derivation. Make for educational purposes only."

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
